[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
axum = "0.6.10"
config = "0.13.3"
deadpool-postgres = { version = "0.10.5", features = ["serde"]}
serde = { version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] } 
uuid = { version = "1.3.0", features = ["serde", "v4"]}
